--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Vocabulary Highlighter",
-  "description": "Highlight words and phrases on every web page you visit",
+  "description": "Highlight GRE vocabularies and phrases on every web page you visit.",
   "author": "cwhuang29",
   "version": "1.0.0",
   "action": {
