--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "default_popup": "index.html",
     "default_title": "Open the popup"
   },
-  "permissions": ["activeTab", "tabs", "storage", "scripting", "alarms", "notifications"],
+  "permissions": ["activeTab", "tabs", "storage", "scripting"],
   "background": {
     "service_worker": "background.js",
     "type": "module"
