--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "default_popup": "index.html",
     "default_title": "Open the popup"
   },
-  "permissions": ["activeTab", "tabs", "storage", "scripting"],
+  "permissions": ["tabs", "storage"],
   "background": {
     "service_worker": "src/background/index.js",
     "type": "module"
