New feature: Users can bookmark words and review them from the ext popup
1. Users can add/remove words from their collection by clicking the star icon in the detail popup
2. Display all the bookmarked words on the ext popup
3. This action is immediately synced up to all the tabs in the same or different windows

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "no-use-before-define": 1,
     "no-extra-semi": 1,
     "no-restricted-syntax": "off",
+    "no-case-declarations": "off",
     "no-unused-expressions":["error", { "allowShortCircuit": true }],
     "arrow-parens": 0,
     "react/forbid-prop-types": 0,
