Support google login, connect with backend server to sync up user data, and add a profile section in ext popup

--- a/.eslintrc
+++ b/.eslintrc
@@ -85,6 +85,7 @@
           "@actions": "./src/shared/actions",
           "@constants": "./src/shared/constants",
           "@hooks": "./src/shared/hooks",
+          "@oauth": "./src/shared/oauth",
           "@selectors": "./src/shared/selectors",
           "@services": "./src/shared/services",
           "@utils": "./src/shared/utils"
