--- a/jsconfig.json
+++ b/jsconfig.json
@@ -20,6 +20,7 @@
       "@actions/*": ["shared/actions/*"],
       "@constants/*": ["shared/constants/*"],
       "@hooks/*": ["shared/hooks/*"],
+      "@oauth/*": ["shared/oauth/*"],
       "@selectors/*": ["shared/selectors/*"],
       "@services/*": ["shared/services/*"],
       "@utils/*": ["shared/utils/*"]
